--- a/guides/webex-jabber/jabber-qrg-mac.html
+++ b/guides/webex-jabber/jabber-qrg-mac.html
@@ -60,8 +60,10 @@ h3 { padding-top: 20px; }
 <small>Quick Reference Guide</small></h1>
 <p>INFO ON INSTALL, SYS REQS HERE</p></div>
 
+<h2>Phonecalls with Jabber</h2>
+<p>Making a phonecall with Jabber is laughably simple. After you've been provisioned by an administrator, installed the Cisco Jabber application and verified your system meets the minimum requirements, use the steps below to start making and receiving calls with your computer.</p>
 
-<h2>Make a Call</h2>
+<h3>Make a Call</h3>
 <ol>
 	<li>Open the Jabber application and sign in.</li>
 	<li>Hover over a contact name in your contacts list.</li>
@@ -86,8 +88,8 @@ h3 { padding-top: 20px; }
 	<li>Enter a phone number, including country and area codes.</li>
 </ol>
 
-<h3>Conference Calls</h3>
-<p>You can create an ad-hoc conference with your contacts. Simply merge your calls to create a conference call:
+<h3>Conference Calling</h3>
+<p>You can create an ad-hoc conference with your contacts. Simply merge your calls to create a conference call. Here's how:
 <ol>
 	<li>Start a call with your first contact.</li>
 	<li>Start a second call with another contact, the first call is automatically put on hold.</li>
@@ -125,15 +127,11 @@ h3 { padding-top: 20px; }
 </ol></p>
 
 
-<h3>Change Audio Devices</h3>
-
+<h2>Voicemail and Jabber</h2>
+<p>After connecting to Cisco Jabber, you're able to manipulate (listen to, delete, respond to caller) voicemails received at your CWRU voicemail inbox (no group mailboxes). Click the voicemail tab to begin.</p>
+<p><mark>Note:</mark> Deleting a voicemail message using Jabber also deletes the message from the server and phone. Finally, that little red light on your handset will stop blinking.</p>
 <ol>
-	<li>Plug in your headset or other audio device to the appropriate USB port.</li>
-	<li>Choose <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>Audio/Video</strong>.</li>
-	<li>Choose your audio device from the drop-down lists after the hardware is recognized.</li>
-	<li>Adjust the volume for the audio device.</li>
-	<li>Close the <strong>Preferences</strong> window to apply the changes.</li>
-</ol>
+
 
 
 <h2>Contacts</h2>
