--- a/index.html
+++ b/index.html
@@ -1,1 +1,162 @@
 
+<!DOCTYPE html>
+
+<!--
+                     _                
+                    | |               
+ _ __ _ __  _ __ ___| |_ _______ _ __ 
+| '__| '_ \| '__/ _ \ __|_  / _ \ '__|
+| |  | |_) | | |  __/ |_ / /  __/ |   
+|_|  | .__/|_|  \___|\__/___\___|_|   
+     | |                              
+     |_|
+
+-->
+
+
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="self-desc of services">
+    <meta name="author" content="Ryan Pretzer">
+    
+    <title>You need a technical writer!</title>
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+
+
+<style>
+    h2 { padding-top: 30px; }
+    h3 { padding-top: 20px; }
+    #banner { background: #FF6666;}
+    #inner-banner { background: url('/current-work/RCiD.png') no-repeat right;}
+    #banner-text { color: #FFFFFF}
+    @media screen and (max-width: 768px) { #inner-banner { background: #FF6666;}}
+</style>
+
+</head>
+
+<body>
+  <div id="banner" class="container-fluid">
+    <div id="inner-banner" class="container">
+      <p>&nbsp;</p>
+      <h1 id="banner-text">Stop repeating yourself</h1>
+      <p id="banner-text" class="lead">Don't rely on serendipity. <strong>Get in touch.</strong> <a href="mailto:rap141@case.edu"><span class="glyphicon glyphicon-send"></span></a></p>
+      <p>&nbsp;</p>
+    </div>
+  </div>
+
+<div class="container">
+
+  <div>
+    <h2>Understand the first time</h2> 
+    <p class="lead">We digest your complex ideas, concepts, processes and procedures and produce <strong>easy-to-understand</strong>, <strong>portable</strong> deliverables.</p>
+  </div>
+
+  <div>
+    <h2>Take action</h2>
+    <p class="lead">We design documents that measure up. Real experience and real data inform our pattern libraries. We're  2 parts nerdy friend, &frac12; part slick sales bro, and 100% customer-focused.</p>
+  </div>
+
+  <div>
+    <h2>Get Full-stack Information Design</h2>
+    <p class="lead">We create <strong>relevant</strong>, <strong>useful</strong> and <strong>accurate</strong> documents crafted for specifically targeted audiences to build confidently self-sufficient customers. You? Be invisible. Empower your customers.</p>
+    <p class="lead">Behold mortal! Our analytics, IA, prototyping and deployment toolbelt of legend&hellip;</p>
+  
+  <div class="row">
+  <div class="col-xs-6 col-sm-3">
+    <ul>
+      <li><a href="http://www.alteryx.com/" target="_blank">Alteryx</a></li>
+      <li><a href="http://newrelic.com/" target="_blank">New Relic</a></li>
+      <li><a href="http://www.qsrinternational.com/product" target="_blank">NVivo</a></li>
+      <li><a href="https://balsamiq.com/" target="_blank">Balsamiq</a></li>
+      <li><a href="https://mixpanel.com/" target="_blank">Mixpanel</a></li>
+    </ul>
+  </div>
+  <div class="col-xs-6 col-sm-3">
+    <ul>
+      <li><a href="http://www.tableau.com/" target="_blank">Tableau</a></li>
+      <li><a href="http://www.google.com/analytics/" target="_blank">Google Analytics</a></li>
+      <li><a href="http://d3js.org/">D3.js</a></li>
+      <li><a href="https://git-scm.com/">Git</a></li>
+      <li><a href="https://www.optimalworkshop.com/" target="_blank">Optimal Workshop</a></li>
+    </ul>
+  </div>
+  <div class="col-xs-6 col-sm-3">
+    <ul>
+      <li><a href="https://aws.amazon.com/what-is-aws/" target="_blank">Amazon AWS</a></li>
+      <li><a href="http://www.sublimetext.com/" target="_blank">Sublime Text</a></li>
+      <li><a href="https://apps.google.com/">Google Apps</a></li>
+      <li><a href="https://cucumber.io/">Cucumber</a></li>
+      <li><a href="https://daringfireball.net/projects/markdown/" target="_blank">Markdown</a></li>
+    </ul>
+  </div>
+  <div class="col-xs-6 col-sm-3">
+    <ul>
+      <li><a href="https://www.latex-project.org/" target="_blank">Latex</a></li>
+      <li><a href="http://pandoc.org/" target="">Pandoc</a></li>
+      <li><a href="http://lab.hakim.se/reveal-js/#/" target="_blank">Reveal.js</a></li>
+      <li><a href="https://www.docker.com/" target="_blank">Docker</a></li>
+      <li><a href="http://meanjs.org/" target="_blank">MEAN stack</a></li>
+    </ul>
+  </div>
+  </div>
+
+<!--   <div>
+    <h2>We play well with others</h2>
+    <p class="lead">Technical writers regularly work with talent across your enterprise &em; editors, graphic designers, illustrators, document specialists, content managers, instructional designers, trainers, analysts and engineers.</p>
+  </div> -->
+
+<!--   <div>
+    <h2>Support your users</h2>
+      <ul>
+        <li>Online and embedded help for applications</li>
+        <li>Microcopy</li>
+        <li>User manuals, FAQs, Reference Guides</li>
+        <li>White Papers</li>
+        <li>Instructional Design</li>
+        <li>Service Desk scripting</li>
+      </ul>
+  </div>
+
+  <div>
+    <h2>Business planning + UX</h2>
+      <ul>  
+        <li>RFP review</li>
+        <li>UX study facilitation</li>
+        <li>Process mapping</li>  
+        <li>Service description</li>
+        <li>Business cases</li>
+        <li>Presentations w/ slide decks (HTML + Keynote + Powerpoint)</li>
+      </ul>
+  </div>
+  
+  <div>
+    <h2>IT Operations</h2>
+      <ul>
+        <li>Knowledgebase design (taxonomy)</li>
+        <li>Structured data visualization</li>
+        <li>Requirements specifications (including wireframes)</li>
+        <li>API documentation</li>
+        <li>Report Design</li>
+        <li>Document templating</li>
+      </ul>
+  </div> -->
+<!-- </div> -->
+
+  <hr>
+
+  <div class="pull-right">
+    <span class="copy-left">&copy;</span> 2016, <strong>ROBOTCOMM</strong> Information Design
+  </div>
+  <div class="clearfix"></div>
+</div><!-- ./container -->
+
+<!-- Bootstrap core JavaScript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+</body>
+</html>
