trying to remember how to do this

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <style>
     h2 { padding-top: 30px; }
     h3 { padding-top: 20px; }
-    #banner { background: #FF6666;}
+    #banner { background: #CC0066;}
     #inner-banner { background: url('/current-work/RCiD.png') no-repeat right;}
     #banner-text { color: #FFFFFF}
     @media screen and (max-width: 768px) { #inner-banner { background: #FF6666;}}
