I really like commit messages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="inner-banner" class="container">
       <p>&nbsp;</p>
       <h1 id="banner-text">Stop repeating yourself</h1>
-      <p id="banner-text" class="lead">Don't rely on serendipity. <strong>Get in touch.</strong> <a href="mailto:rap141@case.edu"><span class="glyphicon glyphicon-send"></span></a></p>
+      <p id="banner-text" class="lead">Don't rely on serendipity. <strong>Get in touch.</strong> <a href="mailto:rpretzer@gmail.com"><span class="glyphicon glyphicon-send"></span></a></p>
       <p>&nbsp;</p>
     </div>
   </div>
