match inner and outer bg colors

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 
 <!--
@@ -30,7 +31,7 @@
 <style>
     h2 { padding-top: 30px; }
     h3 { padding-top: 20px; }
-    #banner { background: #CC0066;}
+    #banner { background: #FF6666;}
     #inner-banner { background: url('RCiD.png') no-repeat right;}
     #banner-text { color: #FFFFFF}
     @media screen and (max-width: 768px) { #inner-banner { background: #FF6666;}}
