fixing link targets - open in new tab

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 
 <!--
@@ -80,8 +81,8 @@
     <ul>
       <li><a href="http://www.tableau.com/" target="_blank">Tableau</a></li>
       <li><a href="http://www.google.com/analytics/" target="_blank">Google Analytics</a></li>
-      <li><a href="http://d3js.org/">D3.js</a></li>
-      <li><a href="https://git-scm.com/">Git</a></li>
+      <li><a href="http://d3js.org/" target="_blank">D3.js</a></li>
+      <li><a href="https://git-scm.com/" target="_blank">Git</a></li>
       <li><a href="https://www.optimalworkshop.com/" target="_blank">Optimal Workshop</a></li>
     </ul>
   </div>
@@ -89,15 +90,15 @@
     <ul>
       <li><a href="https://aws.amazon.com/what-is-aws/" target="_blank">Amazon AWS</a></li>
       <li><a href="http://www.sublimetext.com/" target="_blank">Sublime Text</a></li>
-      <li><a href="https://apps.google.com/">Google Apps</a></li>
-      <li><a href="https://cucumber.io/">Cucumber</a></li>
+      <li><a href="https://apps.google.com/" target="_blank">Google Apps</a></li>
+      <li><a href="https://cucumber.io/" target="_blank">Cucumber</a></li>
       <li><a href="https://daringfireball.net/projects/markdown/" target="_blank">Markdown</a></li>
     </ul>
   </div>
   <div class="col-xs-6 col-sm-3">
     <ul>
       <li><a href="https://www.latex-project.org/" target="_blank">Latex</a></li>
-      <li><a href="http://pandoc.org/" target="">Pandoc</a></li>
+      <li><a href="http://pandoc.org/" target="_blank">Pandoc</a></li>
       <li><a href="http://lab.hakim.se/reveal-js/#/" target="_blank">Reveal.js</a></li>
       <li><a href="https://www.docker.com/" target="_blank">Docker</a></li>
       <li><a href="http://meanjs.org/" target="_blank">MEAN stack</a></li>
