updates to index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="inner-banner" class="container">
       <p>&nbsp;</p>
       <h1 id="banner-text">Stop repeating yourself</h1>
-      <p id="banner-text" class="lead">Don't rely on serendipity. <strong>Get in touch.</strong> <a href="mailto:rpretzer@gmail.com"><span class="glyphicon glyphicon-send"></span></a></p>
+      <p id="banner-text" class="lead">Don't rely on serendipity. <a href="mailto:rpretzer@gmail.com"><strong> Get in touch. </strong><span class="glyphicon glyphicon-send"></span></a></p>
       <p>&nbsp;</p>
     </div>
   </div>
@@ -64,7 +64,7 @@
 
   <div>
     <h2>Get Full-stack Information Design</h2>
-    <p class="lead">We create <strong>relevant</strong>, <strong>useful</strong> and <strong>accurate</strong> documents crafted for specifically targeted audiences to build confidently self-sufficient customers. You? Be invisible. Empower your customers.</p>
+    <p class="lead">We create <strong>relevant</strong>, <strong>useful</strong> and <strong>accurate</strong> docs crafted for specifically targeted audiences to build confidently self-sufficient customers. You? Be invisible. Empower your customers.</p>
     <p class="lead">Behold mortal! Our analytics, IA, prototyping and deployment toolbelt of legend&hellip;</p>
   
   <div class="row">
