--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 
 <!--
@@ -59,7 +60,7 @@
 
   <div>
     <h2>Take action</h2>
-    <p class="lead">We design documents that measure up. Real experience and real data inform our pattern libraries. We're  2 parts nerdy friend, &frac12; part slick sales bro, and 100% customer-focused.</p>
+    <p class="lead">We design documents that measure up. Real experience and real data inform our pattern libraries.</p>
   </div>
 
   <div>
